Update localised HTML files in Vienna Help to match English source files

--- a/Vienna Help/Resources/da.lproj/keyboard.html
+++ b/Vienna Help/Resources/da.lproj/keyboard.html
@@ -3,425 +3,306 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Tastaturgenveje</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Tastaturgenveje</span>
   <p>Du kan bruge dit tastatur til hurtigt at klare mange funktioner i Vienna. For at finde genveje for ofte brugte kommandoer, kig da i menuerne (eller se listen i bunden af denne side). Mange emner i Vienna, såsom mappefanen og artikellistefanen, har også contextual menuer. For at se en contextualmenu, hold Kontrol-tasten nede og klik på et emne.</p>
   <p>For at gøre en handling, tryk genvejstasterne indikeret nedenfor.</p>
-  <table width="662" cellspacing="0" cellpadding="0">
-    <tbody>
-      <tr>
-        <td width="215" class="greyed">
-          <p><b>Taster</b></p>
-        </td>
-        <td class="greyed">
-          <p><b>Handling</b></p>
-        </td>
-      </tr>
-    </tbody>
+  <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
+    <tr>
+      <td width="215" class="greyed"><b>Taster</b></td>
+      <td width="462" class="greyed"><b>Handling</b></td>
+    </tr>
   </table>
-  <table width="662" cellspacing="0" cellpadding="0">
-    <tbody>
-      <tr>
-        <td>
-          <p><b>Enkelttastsgenveje</b></p>
-        </td>
-        <td>
-          <p>&nbsp;</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>f</p>
-        </td>
-        <td>
-          <p>Sætter indputsfokuset til søgevinduet.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>r</p>
-        </td>
-        <td>
-          <p>Markerer de valgte artikler som værende læst.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>s</p>
-        </td>
-        <td>
-          <p>Markere den nuværende mappe som værende læst, og hopper derefter til den næste mappe med ulæste artikler.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>k</p>
-        </td>
-        <td>
-          <p>Markerer den nuværende mappe som værende læst.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>m</p>
-        </td>
-        <td>
-          <p>Sætter et mærke ved de valgte artikler.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>&lt;</p>
-        </td>
-        <td>
-          <p>Viser den sidst sete artikel eller hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>&gt;</p>
-        </td>
-        <td>
-          <p>Viser den efterfølgende sete artikel eller hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Spacebar</p>
-        </td>
-        <td>
-          <p>Hopper til den næste ulæste artikel medmindre den nuværende artikel har mere tekst at rulle i, hvilket i såfald medfører at den ruller den nuværende artikel én side op.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Enter/Return</p>
-        </td>
-        <td>
-          <p>Åbner den valgte artikels originale hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Delete/Backspace</p>
-        </td>
-        <td>
-          <p>Rykker de valgte artikler til Papirkurven. Hvis denne tast bruger i Papirkurven, vil de valgte artikler blive slettet permanent.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p><b>Generelle genveje</b></p>
-        </td>
-        <td>
-          <p>&nbsp;</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Alt-klik</p>
-        </td>
-        <td>
-          <p>Åbner den klikkede henvisning, og overgår dine indstillinger for åbning af henvisninger i ekstern browser.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-N</p>
-        </td>
-        <td>
-          <p>Laver et nyt abonnement.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-F</p>
-        </td>
-        <td>
-          <p>Lav en smartmappe.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-E</p>
-        </td>
-        <td>
-          <p>Rediger den valgte mappehenvisning eller rediger et smartmappekriterie.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-D</p>
-        </td>
-        <td>
-          <p>Slet den valgte mappe.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-N</p>
-        </td>
-        <td>
-          <p>Omdøb den valgte mappe.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-R</p>
-        </td>
-        <td>
-          <p>Opdater alle abonnementer.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-R</p>
-        </td>
-        <td>
-          <p>Opdater kun de valgte abonnementer i listen.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Control-Command-S</p>
-        </td>
-        <td>
-          <p>Stopper alle aktive opdateringer.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-P</p>
-        </td>
-        <td>
-          <p>Udskriv de valgte artikler.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-P</p>
-        </td>
-        <td>
-          <p>Viser sidelayoutpanelet.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-?</p>
-        </td>
-        <td>
-          <p>Viser Vienna hjælp-bogen.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p><b>Artikelgenveje</b></p>
-        </td>
-        <td>
-          <p>&nbsp;</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Alt-Enter/Alt-Return</p>
-        </td>
-        <td>
-          <p>Åbner den valgte artikel originale hjemmeside, og overgår dine indstillinger for åbning af henvisninger i ekstern browser.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-U</p>
-        </td>
-        <td>
-          <p>Hopper til den næste ulæste artikel.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>Command-Y</td>
-        <td>Opens the article list tab.</td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-M</p>
-        </td>
-        <td>
-          <p>Mærker de valgte artikler.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-U</p>
-        </td>
-        <td>
-          <p>Markerer den valgte artikler som værende læst.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-S</p>
-        </td>
-        <td>
-          <p>Markerer den valgte mappe som værende læst, og hopper derefter til den næste mappe med ulæste artikler.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-O</p>
-        </td>
-        <td>
-          <p>Gendanner en artikel til dens originale mappe fra Papirkurven.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-K</p>
-        </td>
-        <td>
-          <p>Makerer alle artikler i de valgte mapper som værende læst.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Skift-Command-K</p>
-        </td>
-        <td>
-          <p>Markerer alle artikler i alle mapper som værende læst.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p><b>Vinduegenveje</b></p>
-        </td>
-        <td>
-          <p>&nbsp;</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-W</p>
-        </td>
-        <td>
-          <p>Lukker den aktive fane hvis der er en åben. Hvis ingen faner er åbne, lukkes Vienna-vinduet.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Alt-Command-W</p>
-        </td>
-        <td>
-          <p>Lukker alle fanevinduer. Noter at denne funktion erstatter Luk fane funktionen i Arkiv-menuen når Alt-tasten holdes nede.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Alt-Command-Left</p>
-        </td>
-        <td>
-          <p>Vis det foregående fanevindue.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Alt-Command-Right</p>
-        </td>
-        <td>
-          <p>Viser det næste fanevindue.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-M</p>
-        </td>
-        <td>
-          <p>Minimerer Vienna-vinduet til Docken.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-0</p>
-        </td>
-        <td>
-          <p>Viser aktivitetslogvinduet.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-1</p>
-        </td>
-        <td>
-          <p>Genåbner Vienna-vinduet hvis det tidligere var lukket.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-2</p>
-        </td>
-        <td>
-          <p>Viser vinduet med hentede filer.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p><b>Browservinduegenveje</b></p>
-        </td>
-        <td>
-          <p>&nbsp;</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Alt-R</p>
-        </td>
-        <td>
-          <p>Genindlæser den nuværende hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-Period</p>
-        </td>
-        <td>
-          <p>Stopper indlæsningen af den nuværende hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-[ <i>eller</i> Command-Left</p>
-        </td>
-        <td>
-          <p>Går tilbage til den foregående hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-] <i>eller</i> Command-Right</p>
-        </td>
-        <td>
-          <p>Går frem til den næste hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-F</p>
-        </td>
-        <td>
-          <p>Sætter indputsfokusset i søgefeltet. Indtast noget tekst her og tryk Enter for at søge i teksten på den nuværende hjemmeside.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Command-G</p>
-        </td>
-        <td>
-          <p>Søger efter den næste gang din søgte tekst fremgår i teksten på hjemmesiden.</p>
-        </td>
-      </tr>
-    </tbody>
+  <table width="662" border="0" cellspacing="10">
+    <tr>
+      <td width="200"><b>Enkelttastsgenveje</b></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td width="115">f</td>
+      <td>Opens the filter bar and puts the focus on the filter search field.</td>
+    </tr>
+    <tr>
+      <td>h</td>
+      <td>Sætter indputsfokuset til søgevinduet.</td>
+    </tr>
+    <tr>
+      <td>k</td>
+      <td>Markerer den nuværende mappe som værende læst.</td>
+    </tr>
+    <tr>
+      <td>m</td>
+      <td>Sætter et mærke ved de valgte artikler.</td>
+    </tr>
+    <tr>
+      <td>b</td>
+      <td>Moves to the first unread article.</td>
+    </tr>
+    <tr>
+      <td>n</td>
+      <td>Moves to the next unread article.</td>
+    </tr>
+    <tr>
+      <td>r <i>or</i> u</td>
+      <td>Markerer de valgte artikler som værende læst.</td>
+    </tr>
+    <tr>
+      <td>s</td>
+      <td>Markere den nuværende mappe som værende læst, og hopper derefter til den næste mappe med ulæste artikler.</td>
+    </tr>
+    <tr>
+      <td>&lt;</td>
+      <td>Viser den sidst sete artikel eller hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>&gt;</td>
+      <td>Viser den efterfølgende sete artikel eller hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>Left</td>
+      <td>Moves the focus to the folder list if it is currently in the article list.</td>
+    </tr>
+    <tr>
+      <td>Spacebar</td>
+      <td>Hopper til den næste ulæste artikel medmindre den nuværende artikel har mere tekst at rulle i, hvilket i såfald medfører at den ruller den nuværende artikel én side op.</td>
+    </tr>
+    <tr>
+      <td>Enter/Return</td>
+      <td>Åbner den valgte artikels originale hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>Delete/Backspace</td>
+      <td>Rykker de valgte artikler til Papirkurven. Hvis denne tast bruger i Papirkurven, vil de valgte artikler blive slettet permanent.</td>
+    </tr>
+    <tr>
+      <td width="200"><b>Generelle genveje</b></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Alt-klik</td>
+      <td>Åbner den klikkede henvisning, og overgår dine indstillinger for åbning af henvisninger i ekstern browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-B</td>
+      <td>Opens the filter bar.</td>
+    </tr>
+    <tr>
+      <td>Command-N</td>
+      <td>Laver et nyt abonnement.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-G</td>
+      <td>Create a group folder.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-F</td>
+      <td>Lav en smartmappe.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-E</td>
+      <td>Rediger den valgte mappehenvisning eller rediger et smartmappekriterie.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-D</td>
+      <td>Slet den valgte mappe.</td>
+    </tr>
+    <tr>
+      <td>Command-C</td>
+      <td>Copies the selected text to the clipboard. If the focus is on an article, it copies the article details to the clipboard.</td>
+    </tr>
+    <tr>
+      <td>Command-H</td>
+      <td>Hides the Vienna main window.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-H</td>
+      <td>Hides all other application windows but keeps the Vienna main window visible.</td>
+    </tr>
+    <tr>
+      <td>Command-I</td>
+      <td>Displays the Info window for the selected folder.</td>
+    </tr>
+    <tr>
+      <td>Command-L</td>
+      <td>Puts the focus on the address bar of the current tab. Or if no browser is open and has the focus, opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-N</td>
+      <td>Omdøb den valgte mappe.</td>
+    </tr>
+    <tr>
+      <td>Command-R</td>
+      <td>Opdater alle abonnementer.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-R</td>
+      <td>Opdater kun de valgte abonnementer i listen.</td>
+    </tr>
+    <tr>
+      <td>Control-Command-S</td>
+      <td>Stopper alle aktive opdateringer.</td>
+    </tr>
+    <tr>
+      <td>Command-P</td>
+      <td>Udskriv de valgte artikler.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-P</td>
+      <td>Viser sidelayoutpanelet.</td>
+    </tr>
+    <tr>
+      <td>Command-Q</td>
+      <td>Exit Vienna.</td>
+    </tr>
+    <tr>
+      <td>Command-T</td>
+      <td>Opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
+      <td>Command-U</td>
+      <td>Hopper til den næste ulæste artikel.</td>
+    </tr>
+    <tr>
+      <td>Command-Z</td>
+      <td>Undoes the last action, if it can be undone.</td>
+    </tr>
+    <tr>
+      <td>Command-/</td>
+      <td>Toggles the status bar on or off.</td>
+    </tr>
+    <tr>
+      <td>Command-+</td>
+      <td>Increases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Command--</td>
+      <td>Decreases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Command-,</td>
+      <td>Opens the Vienna preferences panel.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-Backspace</td>
+      <td>Empties the trash folder after prompting for confirmation.</td>
+    </tr>
+    <tr>
+      <td>Command-?</td>
+      <td>Viser Vienna hjælp-bogen.</td>
+    </tr>
+    <tr>
+      <td><b>Artikelgenveje</b></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Alt-Enter/Alt-Return</td>
+      <td>Åbner den valgte artikel originale hjemmeside, og overgår dine indstillinger for åbning af henvisninger i ekstern browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-Z</td>
+      <td>Redo the last action, if it was previously undone.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-M</td>
+      <td>Mærker de valgte artikler.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-U</td>
+      <td>Markerer den valgte artikler som værende læst.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-S</td>
+      <td>Uses your default mail application to send a link to the current article by e-mail.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-S</td>
+      <td>Markerer den valgte mappe som værende læst, og hopper derefter til den næste mappe med ulæste artikler.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-O</td>
+      <td>Gendanner en artikel til dens originale mappe fra Papirkurven.</td>
+    </tr>
+    <tr>
+      <td>Skift-Command-K</td>
+      <td>Makerer alle artikler i de valgte mapper som værende læst.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-K</td>
+      <td>Markerer alle artikler i alle mapper som værende læst.</td>
+    </tr>
+    <tr>
+      <td><b>Vinduegenveje</b></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Command-W</td>
+      <td>Lukker den aktive fane hvis der er en åben. Hvis ingen faner er åbne, lukkes Vienna-vinduet.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-W</td>
+      <td>Lukker alle fanevinduer. Noter at denne funktion erstatter Luk fane funktionen i Arkiv-menuen når Alt-tasten holdes nede.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-Left</td>
+      <td>Vis det foregående fanevindue.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-Right</td>
+      <td>Viser det næste fanevindue.</td>
+    </tr>
+    <tr>
+      <td>Command-Y</td>
+      <td>Opens the article list tab.</td>
+    </tr>
+    <tr>
+      <td>Command-M</td>
+      <td>Minimerer Vienna-vinduet til Docken.</td>
+    </tr>
+    <tr>
+      <td>Command-0</td>
+      <td>Viser aktivitetslogvinduet.</td>
+    </tr>
+    <tr>
+      <td>Command-1</td>
+      <td>Genåbner Vienna-vinduet hvis det tidligere var lukket.</td>
+    </tr>
+    <tr>
+      <td>Command-2</td>
+      <td>Viser vinduet med hentede filer.</td>
+    </tr>
+    <tr>
+      <td><b>Browservinduegenveje</b></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Alt-R</td>
+      <td>Genindlæser den nuværende hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>Command-Period</td>
+      <td>Stopper indlæsningen af den nuværende hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>Command-[ <i>eller</i> Command-Left</td>
+      <td>Går tilbage til den foregående hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>Command-] <i>eller</i> Command-Right</td>
+      <td>Går frem til den næste hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>Command-F</td>
+      <td>Sætter indputsfokusset i søgefeltet. Indtast noget tekst her og tryk Enter for at søge i teksten på den nuværende hjemmeside.</td>
+    </tr>
+    <tr>
+      <td>Command-G</td>
+      <td>Søger efter den næste gang din søgte tekst fremgår i teksten på hjemmesiden.</td>
+    </tr>
   </table>
 </body>
 </html>
