--- a/Vienna Help/Resources/de.lproj/Vienna.html
+++ b/Vienna Help/Resources/de.lproj/Vienna.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="AppleTitle" content="Vienna Help" />
+  <meta name="AppleTitle" content="Vienna Hilfe" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
   <title>Vienna Hilfe</title>
 </head>
@@ -24,6 +24,8 @@
           <p><a href="keyboard.html">Kurzbefehle für häufig verwendete Befehle</a></p>
           <p class="header">Was tun?</p>
           <p><a href="faq.html">Häufig gestellte Fragen, Support und Fehlerbeseitigung.</a></p>
+          <p class="header">Advanced Settings</p>
+          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
         </td>
       </tr>
     </tbody>
