--- a/Vienna Help/Resources/en.lproj/keyboard.html
+++ b/Vienna Help/Resources/en.lproj/keyboard.html
@@ -48,11 +48,7 @@
       <td>Moves to the next unread article.</td>
     </tr>
     <tr>
-      <td>r</td>
-      <td>Toggles the selected articles read and unread.</td>
-    </tr>
-    <tr>
-      <td>u</td>
+      <td>r <i>or</i> u</td>
       <td>Toggles the selected articles read and unread.</td>
     </tr>
     <tr>
@@ -70,10 +66,6 @@
     <tr>
       <td>Left</td>
       <td>Moves the focus to the folder list if it is currently in the article list.</td>
-    </tr>
-    <tr>
-      <td>Right</td>
-      <td>Moves the focus to the article list if it is currently in the folder list.</td>
     </tr>
     <tr>
       <td>Spacebar</td>
@@ -102,6 +94,10 @@
     <tr>
       <td>Command-N</td>
       <td>Create a new subscription.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-G</td>
+      <td>Create a group folder.</td>
     </tr>
     <tr>
       <td>Shift-Command-F</td>
@@ -170,10 +166,6 @@
     <tr>
       <td>Command-U</td>
       <td>Moves to the next unread article.</td>
-    </tr>
-    <tr>
-      <td>Command-Y</td>
-      <td>Opens the article list tab.</td>
     </tr>
     <tr>
       <td>Command-Z</td>
@@ -262,6 +254,10 @@
     <tr>
       <td>Alt-Command-Right</td>
       <td>Displays the next tab window.</td>
+    </tr>
+    <tr>
+      <td>Command-Y</td>
+      <td>Opens the article list tab.</td>
     </tr>
     <tr>
       <td>Command-M</td>
