--- a/Vienna Help/Resources/es.lproj/faq.html
+++ b/Vienna Help/Resources/es.lproj/faq.html
@@ -11,31 +11,39 @@
   <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">¿Cómo puedo...?</span>
   <p>Le presentamos algunas de las preguntas más frecuentes acerca de Vienna. Consulte el <a href="http://www.vienna-rss.com/vienna_faq.html">F.A.Q. oficial</a> para obtener respuestas más concretas y, obviamente, también los últimos consejos prácticos para el uso de Vienna.</p>
   <ul>
-    <li><a href="#Where_do_I_get_the_Vienna_source_code">¿Dónde puedo conseguir el código de Vienna?</a></li>
     <li><a href="#I_found_a_problem_with_Vienna._How_do_I_report_it">He apreciado un problema en Vienna. ¿Cómo informo de ello?</a></li>
-    <li><a href="#How_do_I_create_my_own_styles">¿Cómo puedo crear mis propios estilos?</a></li>
-    <li><a href="#How_do_I_create_my_own_scripts">¿Cómo puedo crear mis propios scripts?</a></li>
     <li><a href="#How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">¿Cómo puedo comprobar si mis suscripciones se han actualizado?</a></li>
+    <li><a href="#How_do_I_subscribe_to_a_feed_requiring_user_authentication">How do I subscribe to a feed requiring user authentication?</a></li>
     <li><a href="#How_do_I_move_my_Vienna_database_to_another_folder">¿Cómo puedo mover la base de datos de Vienna a otra carpeta?</a></li>
     <li><a href="#One_of_my_subscriptions_reports_Error_parsing_XML_data_in_feed._What_does_this_mean">Una de mis suscripciones muestra el mensaje «Se ha producido un error al procesar los datos XML de la fuente». ¿Qué significa?</a></li>
     <li><a href="#Is_there_a_shortcut_key_for_going_to_the_next_article_marking_read_etc_">¿Hay alguna función rápida de teclado para pasar al siguiente artículo, marcar como leído, etc?</a></li>
+    <li><a href="#What_do_the_green_dots_mean_in_the_list_of_articles">What do the green dots mean in the list of articles?</a></li>
     <li><a href="#How_do_I_use_Auto_Expire_and_what_does_it_do">¿Cómo puedo utilizar la auto-eliminación de artículos y qué hace?</a></li>
+    <li><a href="#How_do_I_create_my_own_styles">¿Cómo puedo crear mis propios estilos?</a></li>
+    <li><a href="#How_do_I_create_my_own_scripts">¿Cómo puedo crear mis propios scripts?</a></li>
     <li><a href="#How_do_I_request_an_enhancement_in_Vienna">¿Cómo puedo sugerir una mejora para Vienna?</a></li>
+    <li><a href="#Where_do_I_get_the_Vienna_source_code">¿Dónde puedo conseguir el código de Vienna?</a></li>
   </ul>
-  <h2><a id="Where_do_I_get_the_Vienna_source_code" name="Where_do_I_get_the_Vienna_source_code">¿Dónde puedo conseguir el código de Vienna?</a></h2>
-  <p>Consulte la <a href="http://www.vienna-rss.com/vienna_dev.php">página de desarrollo</a> para conocer la manera de obtener el código de Vienna. El código está a libre disposición de todo aquel que quiera conocer cómo funciona Vienna. También está disponible para quien desee construir su propia copia de Vienna desde cero en su propio ordenador o bien quiera incluir partes del código en su propio proyecto. El código se distribuye bajo licencia <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a>.</p>
   <h2><a id="I_found_a_problem_with_Vienna._How_do_I_report_it" name="I_found_a_problem_with_Vienna._How_do_I_report_it">He apreciado un problema en Vienna. ¿Cómo informo de ello?</a></h2>
   <p>Escriba en el foro de soporte y alguien investigará sobre ello. Entregue tanta información como pueda acerca del problema. No olvide especificar la versión de Vienna utilizada (se obtiene en el menú Acerca de Vienna), los pasos previos al error y lo que esperaba que ocurriera.</p>
   <p>Asegúrese de que utiliza siempre la última versión de Vienna. El menú Comprobar si hay actualizaciones le informará en el caso que existan versiones más recientes que la que usted posee.</p>
   <p>Tenga presente que solventar errores goza de mayor prioridad que incluir nuevas características. En el que caso de que se confirme que su problema es un error reconocido y generalizado se intentará dar una solución en un plazo razonable de tiempo.</p>
-  <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">¿Cómo puedo crear mis propios estilos?</a></h2>
-  <p>Consulte la <a href="http://www.vienna-rss.com/vienna_styles.html">página de personalización de estilos</a> para obtener las correspondientes instrucciones.</p>
-  <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">¿Cómo puedo crear mis propios scripts?</a></h2>
-  <p>Los scripts de Vienna se escriben utilizando AppleScript. Consulte la <a href="http://www.apple.com/macosx/features/applescript/resources.html">página de recursos de Apple</a> para obtener más detalles acerca de él y de su uso.</p>
-  <p>Una manera de comenzar es descargar uno de los scripts ya existentes en la <a href="http://www.vienna-rss.com/vienna_files.html">página de descargas de Vienna</a> y abrirlo con el editor de AppleScripts. Consulte también la <a href="http://www.vienna-rss.com/vienna_scripting.html">página de scripts</a> para obtener más detalles de los scripts para Vienna y ejemplos de lo que se puede conseguir.</p>
-  <p>Si desea presentar su propio script a la comunidad de usuarios de la aplicación, envíelo a <a href="mailto:steve@opencommunity.co.uk">steve@opencommunity.co.uk</a> y una vez haya sido probado, se pondrá a disposición de todos en la página de descargas.</p>
   <h2><a id="How_can_I_see_what_happened_when_my_subscriptions_are_refreshed" name="How_can_I_see_what_happened_when_my_subscriptions_are_refreshed">¿Cómo puedo comprobar si mis suscripciones se han actualizado?</a></h2>
   <p>Abra la página de actividad del menú Ventana. La ventana de actividad muestra todas las suscripciones y la situación que tenían la última vez que fueron actualizadas durante la presente sesión. La parte inferior de la ventana de actividad muestra más detalles. Entre éstos se incluyen los encabezados HTTP, que podrían ser útiles para detectar y eliminar fallos. Si el panel de actividades no está visible, puede hacerlo aparecer arrastrando hacia la parte superior la barra inferior de la ventana.</p>
+  <h2><a id="How_do_I_subscribe_to_a_feed_requiring_user_authentication" name="How_do_I_subscribe_to_a_feed_requiring_user_authentication">How do I subscribe to a feed requiring user authentication?</a></h2>
+  <p>First, you need to understand that Open Reader services do not provide authentication to a third party server. Vienna will need to have a direct access to a server if it requires authentication. So, when you subscribe, make sure the "Subscribe in Open Reader" checkbox is UNchecked.</p>
+  <p>Then, it is important to know that there are two main methods that servers use to authenticate an user who requests an XML feed :</p>
+  <ul>
+    <li>requiring a username and a password</li>
+    <li>or requiring a specific cookie</li>
+  </ul>
+  <p>A difficulty lies in the fact that many servers will not explicitly state which method they require.</p>
+  <p>Requiring a username and a password is the most frequent method. It is also the most transparent for the user. On first refresh, Vienna will present you with a dialog box where you can enter the username and the password that has been provided to you.<br />
+  You can check that you have provided these credentials to Vienna (and update them if necessary) through the 'Info' window associated to the feed (which you can access through the 'Folder → Get Info…' menu or through the contextual menu you get when you right-click on the feed in Vienna's left pane).<br />
+  Note that the password is securely stored in Apple's Keychain.</p>
+  <p>For servers which require a cookie, the username and password must NOT be set in the 'Info' window. Both fields MUST be left blank.<br />
+  Instead, you will need to log in to the website through Safari or through a web browser tab in Vienna.<br />
+  A problem is that you may need, from time to time, to re-log in again, because cookies can expire.</p>
   <h2><a id="How_do_I_move_my_Vienna_database_to_another_folder" name="How_do_I_move_my_Vienna_database_to_another_folder">¿Cómo puedo mover la base de datos de Vienna a otra carpeta?</a></h2>
   <p>Por defecto, la base de datos de Vienna es el archivo messages.db que se encuentra en ~/Library/Application Support/Vienna. Usted puede moverlo a la carpeta que desee. Los pasos a realizar son los siguientes:</p>
   <ol>
@@ -63,10 +71,20 @@
   <p>R - Marca el artículo seleccionado como leído si no lo está todavía, o bien como no leído si es que ya ha sido leído.</p>
   <p>F - Marca con indicador el artículo seleccionado si no ha sido marcado previamente, o bien elimina la marca si lo ha sido.</p>
   <p>Consulte la ayuda de Vienna para obtener más funciones rápidas de teclado.</p>
+  <h2><a id="What_do_the_green_dots_mean_in_the_list_of_articles" name="What_do_the_green_dots_mean_in_the_list_of_articles">What do the green dots mean in the list of articles?</a></h2>
+  <p>The blue dots are for new articles, and the green dots are for updated articles: articles whose text has changed since they were last downloaded.</p>
   <h2><a id="How_do_I_use_Auto_Expire_and_what_does_it_do" name="How_do_I_use_Auto_Expire_and_what_does_it_do">¿Cómo puedo utilizar la auto-eliminación de artículos y qué hace exactamente?</a></h2>
   <p>La auto-eliminación de artículos mueve a la papelera los artículos que superan una determinada antigüedad. Esto le permite mantener de manera manejable las carpetas guardando únicamente los artículos recientes. La auto-eliminación de artículos funciona tanto cuando se inicia Vienna como cuando se ha actualizado cualquier suscripción. Para especificar una nueva fecha máxima de los artículos sujetos a la auto-eliminación, cambie la opción Mover los artículos a la papelera en las preferencias de la aplicación.</p>
   <p>La auto-eliminación no eliminará artículos no leídos o con indicador. Vienna entiende que ya que no ha leído estos artículos no desea eliminarlos todavía .</p>
+  <h2><a id="How_do_I_create_my_own_styles" name="How_do_I_create_my_own_styles">¿Cómo puedo crear mis propios estilos?</a></h2>
+  <p>Consulte la <a href="http://www.vienna-rss.com/vienna_styles.html">página de personalización de estilos</a> para obtener las correspondientes instrucciones.</p>
+  <h2><a id="How_do_I_create_my_own_scripts" name="How_do_I_create_my_own_scripts">¿Cómo puedo crear mis propios scripts?</a></h2>
+  <p>Los scripts de Vienna se escriben utilizando AppleScript. Consulte la <a href="http://www.apple.com/macosx/features/applescript/resources.html">página de recursos de Apple</a> para obtener más detalles acerca de él y de su uso.</p>
+  <p>Una manera de comenzar es descargar uno de los scripts ya existentes en la <a href="http://www.vienna-rss.com/vienna_files.html">página de descargas de Vienna</a> y abrirlo con el editor de AppleScripts. Consulte también la <a href="http://www.vienna-rss.com/vienna_scripting.html">página de scripts</a> para obtener más detalles de los scripts para Vienna y ejemplos de lo que se puede conseguir.</p>
+  <p>Si desea presentar su propio script a la comunidad de usuarios de la aplicación, envíelo a <a href="mailto:steve@opencommunity.co.uk">steve@opencommunity.co.uk</a> y una vez haya sido probado, se pondrá a disposición de todos en la página de descargas.</p>
   <h2><a id="How_do_I_request_an_enhancement_in_Vienna" name="How_do_I_request_an_enhancement_in_Vienna">¿Cómo puedo sugerir una mejora para Vienna?</a></h2>
   <p>Escriba un mensaje en el <a href="https://github.com/ViennaRSS/vienna-rss/discussions">foro de soporte</a>. Todas las mejoras son incluidas en un archivo «To-Do» que se incluye en el código como guía para futuros desarrollos.</p>
+  <h2><a id="Where_do_I_get_the_Vienna_source_code" name="Where_do_I_get_the_Vienna_source_code">¿Dónde puedo conseguir el código de Vienna?</a></h2>
+  <p>Consulte la <a href="http://www.vienna-rss.com/vienna_dev.php">página de desarrollo</a> para conocer la manera de obtener el código de Vienna. El código está a libre disposición de todo aquel que quiera conocer cómo funciona Vienna. También está disponible para quien desee construir su propia copia de Vienna desde cero en su propio ordenador o bien quiera incluir partes del código en su propio proyecto. El código se distribuye bajo licencia <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a>.</p>
 </body>
 </html>
