--- a/Vienna Help/Resources/es.lproj/keyboard.html
+++ b/Vienna Help/Resources/es.lproj/keyboard.html
@@ -3,8 +3,9 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Funciones rápidas de teclado</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -24,15 +25,11 @@
     </tr>
     <tr>
       <td width="115">f</td>
+      <td>Opens the filter bar and puts the focus on the filter search field.</td>
+    </tr>
+    <tr>
+      <td>h</td>
       <td>Desplaza el cursor al cajón de búsqueda.</td>
-    </tr>
-    <tr>
-      <td>r</td>
-      <td>Marca el artículo seleccionado como leído.</td>
-    </tr>
-    <tr>
-      <td>s</td>
-      <td>Marca todo el contenido de la carpeta seleccionada como leído y salta a la siguiente carpeta con artículos no leídos.</td>
     </tr>
     <tr>
       <td>k</td>
@@ -43,6 +40,22 @@
       <td>Marca con indicador el artículo seleccionado.</td>
     </tr>
     <tr>
+      <td>b</td>
+      <td>Moves to the first unread article.</td>
+    </tr>
+    <tr>
+      <td>n</td>
+      <td>Moves to the next unread article.</td>
+    </tr>
+    <tr>
+      <td>r <i>or</i> u</td>
+      <td>Marca el artículo seleccionado como leído.</td>
+    </tr>
+    <tr>
+      <td>s</td>
+      <td>Marca todo el contenido de la carpeta seleccionada como leído y salta a la siguiente carpeta con artículos no leídos.</td>
+    </tr>
+    <tr>
       <td>&lt;</td>
       <td>Muestra el artículo o página web previa.</td>
     </tr>
@@ -51,12 +64,12 @@
       <td>Muestra el siguiente artículo o página web.</td>
     </tr>
     <tr>
-      <td>Barra espaciadora</td>
-      <td>Muestra el siguiente artículo no leído. En el caso de que el artículo seleccionado disponga de más de una página, se mostrará la siguiente página del artículo.</td>
+      <td>Left</td>
+      <td>Moves the focus to the folder list if it is currently in the article list.</td>
     </tr>
     <tr>
-      <td>Comando-U</td>
-      <td>Muestra el siguiente artículo no leído.</td>
+      <td>Barra espaciadora</td>
+      <td>Muestra el siguiente artículo no leído. En el caso de que el artículo seleccionado disponga de más de una página, se mostrará la siguiente página del artículo.</td>
     </tr>
     <tr>
       <td>Aceptar</td>
@@ -71,8 +84,20 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Alt-Click</td>
+      <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-B</td>
+      <td>Opens the filter bar.</td>
+    </tr>
+    <tr>
       <td>Comando-N</td>
       <td>Crea una nueva suscripción.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-G</td>
+      <td>Create a group folder.</td>
     </tr>
     <tr>
       <td>Shift-Comando-F</td>
@@ -87,6 +112,26 @@
       <td>Elimina la carpeta seleccionada.</td>
     </tr>
     <tr>
+      <td>Command-C</td>
+      <td>Copies the selected text to the clipboard. If the focus is on an article, it copies the article details to the clipboard.</td>
+    </tr>
+    <tr>
+      <td>Command-H</td>
+      <td>Hides the Vienna main window.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-H</td>
+      <td>Hides all other application windows but keeps the Vienna main window visible.</td>
+    </tr>
+    <tr>
+      <td>Command-I</td>
+      <td>Displays the Info window for the selected folder.</td>
+    </tr>
+    <tr>
+      <td>Command-L</td>
+      <td>Puts the focus on the address bar of the current tab. Or if no browser is open and has the focus, opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
       <td>Shift-Comando-N</td>
       <td>Renombra la carpeta seleccionada.</td>
     </tr>
@@ -99,7 +144,7 @@
       <td>Actualiza únicamente las suscripciones seleccionadas.</td>
     </tr>
     <tr>
-      <td>Comando-Minus</td>
+      <td>Control-Command-S</td>
       <td>Cancela cualquier actualización que se esté produciendo.</td>
     </tr>
     <tr>
@@ -111,8 +156,40 @@
       <td>Muestra la configuración de página.</td>
     </tr>
     <tr>
-      <td>Shift-Comando-V</td>
-      <td>Valida la fuente de noticias.</td>
+      <td>Command-Q</td>
+      <td>Exit Vienna.</td>
+    </tr>
+    <tr>
+      <td>Command-T</td>
+      <td>Opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
+      <td>Command-U</td>
+      <td>Muestra el siguiente artículo no leído.</td>
+    </tr>
+    <tr>
+      <td>Command-Z</td>
+      <td>Undoes the last action, if it can be undone.</td>
+    </tr>
+    <tr>
+      <td>Command-/</td>
+      <td>Toggles the status bar on or off.</td>
+    </tr>
+    <tr>
+      <td>Command-+</td>
+      <td>Increases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Comando-Minus</td>
+      <td>Decreases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Command-,</td>
+      <td>Opens the Vienna preferences panel.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-Backspace</td>
+      <td>Empties the trash folder after prompting for confirmation.</td>
     </tr>
     <tr>
       <td>Comando-?</td>
@@ -123,6 +200,14 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Alt-Enter/Alt-Return</td>
+      <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-Z</td>
+      <td>Redo the last action, if it was previously undone.</td>
+    </tr>
+    <tr>
       <td>Shift-Comando-M</td>
       <td>Marca con indicador los artículos seleccionados.</td>
     </tr>
@@ -131,8 +216,8 @@
       <td>Marca como leídos los artículos seleccionados.</td>
     </tr>
     <tr>
-      <td>Command-Y</td>
-      <td>Opens the article list tab.</td>
+      <td>Alt-Command-S</td>
+      <td>Uses your default mail application to send a link to the current article by e-mail.</td>
     </tr>
     <tr>
       <td>Shift-Comando-S</td>
@@ -171,8 +256,8 @@
       <td>Muestra la pestaña siguiente.</td>
     </tr>
     <tr>
-      <td>Shift-Comando-W</td>
-      <td>Cierra la pantalla principal de Vienna pero deja a la aplicación ejecutándose en segundo plano. Puede acceder de nuevo a la ventana principal haciendo clic en el icono de Vienna o pulsando Comando-1.</td>
+      <td>Command-Y</td>
+      <td>Opens the article list tab.</td>
     </tr>
     <tr>
       <td>Comando-M</td>
