--- a/Vienna Help/Resources/fr.lproj/keyboard.html
+++ b/Vienna Help/Resources/fr.lproj/keyboard.html
@@ -3,29 +3,28 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Raccourcis clavier</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <a id="KeyboardSection" name="KeyboardSection"></a> <span><img src="../shared/images/Small-Vienna-Logo.png" alt="" />&nbsp;&nbsp;</span><span class="header">Raccourcis clavier</span>
   <p>Dans Vienna vous pouvez utiliser votre clavier pour exécuter rapidement beaucoup d'actions. Pour trouver les raccourcis clavier pour les commandes courantes, regardez dans les menus (ou parcourrez la liste en bas de cette page). Beaucoup d'objets dans Vienna, tels que la liste des dossiers ou celle des articles possèdent aussi un menu contextuel. Pour afficher un menu contextuel, pressez la touche "Ctrl" et cliquez sur l'objet.</p>
   <p>Pour réaliser une action, pressez les raccourcis indiqués ci-dessous.</p>
-  <table width="100%" border="0" cellspacing="0" id="table1" cellpadding="8">
+  <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
       <td width="215" class="greyed"><b>Combinaison de touches</b></td>
-      <td class="greyed"><b>Action</b></td>
+      <td width="462" class="greyed"><b>Action</b></td>
     </tr>
   </table>
-  <table width="100%" border="0" cellspacing="10">
+  <table width="662" border="0" cellspacing="10">
     <tr>
-      <td width="250"><b>Raccourci à une touche</b></td>
+      <td width="200"><b>Raccourci à une touche</b></td>
       <td>&nbsp;</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="150">f</td>
+      <td width="115">f</td>
       <td>Ouvrir la barre de recherche et sélectionne le champ de recherche.</td>
     </tr>
     <tr>
@@ -80,16 +79,12 @@
       <td>Suppr <i>ou</i> Backspace</td>
       <td>Déplace les articles sélectionnés dans la corbeille. Lorsque cette commande est utilisée à partir de la corbeille, les articles sélectionnés sont définitivement détruits.</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="250"><b>Raccourcis généraux</b></td>
+      <td width="200"><b>Raccourcis généraux</b></td>
       <td>&nbsp;</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="150">Alt-Click</td>
+      <td>Alt-Click</td>
       <td>Ouvre la page originelle de l'article dans un onglet sans tenir compte des préférences pour ouvrir les liens dans un navigateur externe.</td>
     </tr>
     <tr>
@@ -177,6 +172,10 @@
       <td>Annule l'action précédente si c'est possible.</td>
     </tr>
     <tr>
+      <td>Command-/</td>
+      <td>Toggles the status bar on or off.</td>
+    </tr>
+    <tr>
       <td>⌘-+ (plus)</td>
       <td>Augmente la taille du texte dans la page WEB ou l'article actif.</td>
     </tr>
@@ -196,16 +195,12 @@
       <td>⌘-?</td>
       <td>Affiche l'aide Vienna.</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="250"><b>Raccourcis Articles</b></td>
+      <td><b>Raccourcis Articles</b></td>
       <td>&nbsp;</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="150">Alt-Entrée <i>ou</i> Alt-Return</td>
+      <td>Alt-Entrée <i>ou</i> Alt-Return</td>
       <td>Ouvre la page originelle de l'article dans un onglet sans tenir compte des préférences pour ouvrir les liens dans un navigateur externe.</td>
     </tr>
     <tr>
@@ -240,16 +235,12 @@
       <td>Alt-⌘-K</td>
       <td>Marque tous les articles de tous les dossiers comme étant lus.</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="250"><b>Raccourcis fenêtre</b></td>
+      <td><b>Raccourcis fenêtre</b></td>
       <td>&nbsp;</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="150">⌘-W</td>
+      <td>⌘-W</td>
       <td>Ferme l'onglet actif si plusieurs sont ouverts ; sinon, ferme la fenêtre Vienna.</td>
     </tr>
     <tr>
@@ -284,16 +275,12 @@
       <td>⌘-2</td>
       <td>Affiche la fenêtre de téléchargement.</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="250"><b>Racourcis du navigateur internet</b></td>
+      <td><b>Racourcis du navigateur internet</b></td>
       <td>&nbsp;</td>
     </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="10">
     <tr>
-      <td width="150">Alt-R</td>
+      <td>Alt-R</td>
       <td>Recharge la page web active.</td>
     </tr>
     <tr>
