--- a/Vienna Help/Resources/it.lproj/Vienna.html
+++ b/Vienna Help/Resources/it.lproj/Vienna.html
@@ -24,6 +24,8 @@
           <p><a href="keyboard.html">Scopri le abbreviazioni da tastiera per i comandi comuni</a></p>
           <p class="header">Come Faccio A</p>
           <p><a href="faq.html">Domande Frequenti, come ottenere supporto e passi da eseguire per la risoluzione dei problemi.</a></p>
+          <p class="header">Advanced Settings</p>
+          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
         </td>
       </tr>
     </tbody>
