--- a/Vienna Help/Resources/nl.lproj/keyboard.html
+++ b/Vienna Help/Resources/nl.lproj/keyboard.html
@@ -3,8 +3,9 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Keyboard Shortcuts</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -15,7 +16,7 @@
   <p>⌦&nbsp;=&nbsp;Delete, ⌫&nbsp;=&nbsp;Backspace, ⌅&nbsp;=&nbsp;Enter, ↩&nbsp;=&nbsp;Return, ⌥&nbsp;=&nbsp;Alt, ⇧&nbsp;=&nbsp;Shift, ⌘&nbsp;=&nbsp;Command, ⌃&nbsp;=&nbsp;Control</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
-      <td width="200" class="greyed"><b>Toets(en)</b></td>
+      <td width="215" class="greyed"><b>Toets(en)</b></td>
       <td width="462" class="greyed"><b>Actie</b></td>
     </tr>
   </table>
@@ -23,10 +24,6 @@
     <tr>
       <td width="200"><b>Enkelvoudige toetsen</b></td>
       <td>&nbsp;</td>
-    </tr>
-    <tr>
-      <td width="115">b</td>
-      <td>Ga naar het eerste ongelezen artikel.</td>
     </tr>
     <tr>
       <td width="115">f</td>
@@ -45,15 +42,15 @@
       <td>Schakel de geselecteerde artikelen tussen ⚑ markering aan of uit.</td>
     </tr>
     <tr>
+      <td>b</td>
+      <td>Ga naar het eerste ongelezen artikel.</td>
+    </tr>
+    <tr>
       <td>n</td>
       <td>Ga naar het volgende ongelezen artikel.</td>
     </tr>
     <tr>
-      <td>r</td>
-      <td>Schakel de geselecteerde artikelen tussen gelezen en ongelezen.</td>
-    </tr>
-    <tr>
-      <td>u</td>
+      <td>r <i>or</i> u</td>
       <td>Schakel de geselecteerde artikelen tussen gelezen en ongelezen.</td>
     </tr>
     <tr>
@@ -67,6 +64,10 @@
     <tr>
       <td>&gt;&nbsp;&nbsp;of&nbsp;&nbsp;.</td>
       <td>Toon het volgende bekeken artikel of webpagina.</td>
+    </tr>
+    <tr>
+      <td>Left</td>
+      <td>Moves the focus to the folder list if it is currently in the article list.</td>
     </tr>
     <tr>
       <td>Spatiebalk</td>
@@ -95,6 +96,10 @@
     <tr>
       <td>⌘N</td>
       <td>Maak een nieuw abonnement aan.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-G</td>
+      <td>Create a group folder.</td>
     </tr>
     <tr>
       <td>⇧⌘F</td>
@@ -245,16 +250,16 @@
       <td>Sluit alle tab vensters. Opmerking: Dit commando vervangt de <b>Sluit tab</b> in het <b>Archief</b> menu als de alt (⌥) toets is ingedrukt.</td>
     </tr>
     <tr>
-      <td>⇧⌘W</td>
-      <td>Sluit het Vienna venster maar laat Vienna in de achtergrond werken. U kan het venster weer openen door op het Vienna icoon in de Dock te klikken of door ⌘1 in te toetsen.</td>
-    </tr>
-    <tr>
       <td>⌥⌘←</td>
       <td>Toon het vorige tab venster.</td>
     </tr>
     <tr>
       <td>⌥⌘→</td>
       <td>Toon het volgende tab venster.</td>
+    </tr>
+    <tr>
+      <td>Command-Y</td>
+      <td>Opens the article list tab.</td>
     </tr>
     <tr>
       <td>⌘M</td>
