--- a/Vienna Help/Resources/de.lproj/keyboard.html
+++ b/Vienna Help/Resources/de.lproj/keyboard.html
@@ -3,8 +3,9 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Tastatur-Kürzel</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -13,7 +14,7 @@
   <p>Um eine Funktion auszuführen, drücken sie die unten aufgeführten Tastenkombinationen.</p>
   <table width="662" border="0" cellspacing="0" id="table1" cellpadding="8">
     <tr>
-      <td width="200" class="greyed"><b>Key</b></td>
+      <td width="215" class="greyed"><b>Key</b></td>
       <td width="462" class="greyed"><b>Action</b></td>
     </tr>
   </table>
@@ -24,19 +25,35 @@
     </tr>
     <tr>
       <td width="115">f</td>
+      <td>Opens the filter bar and puts the focus on the filter search field.</td>
+    </tr>
+    <tr>
+      <td>h</td>
       <td>Legt den Eingabefokus auf das Suchfeld.</td>
     </tr>
     <tr>
-      <td>r</td>
+      <td>k</td>
+      <td>Marks the current folder read.</td>
+    </tr>
+    <tr>
+      <td>m</td>
+      <td>Markiert die ausgewählten Artikel.</td>
+    </tr>
+    <tr>
+      <td>b</td>
+      <td>Moves to the first unread article.</td>
+    </tr>
+    <tr>
+      <td>n</td>
+      <td>Moves to the next unread article.</td>
+    </tr>
+    <tr>
+      <td>r <i>or</i> u</td>
       <td>Markiert die ausgewählten Artikel also gelesen.</td>
     </tr>
     <tr>
       <td>s</td>
       <td>Markiert den aktuellen Ordner als gelesen und springt zum nächstne.</td>
-    </tr>
-    <tr>
-      <td>m</td>
-      <td>Markiert die ausgewählten Artikel.</td>
     </tr>
     <tr>
       <td>&lt;</td>
@@ -47,16 +64,12 @@
       <td>Zeigt den nächsten Artikel oder die nächste Webseite.</td>
     </tr>
     <tr>
+      <td>Left</td>
+      <td>Moves the focus to the folder list if it is currently in the article list.</td>
+    </tr>
+    <tr>
       <td>Spacebar</td>
       <td>Springt zum nächsten ungelesen Artikel. Falls der momentane Artikel noch nicht bis zum Ende gescrollt ist, springt die Anzeige des momentanen Artikels um eine Seite.</td>
-    </tr>
-    <tr>
-      <td>Befehl-U</td>
-      <td>Springt zum nächsten ungelesen Artikel.</td>
-    </tr>
-    <tr>
-      <td>Befehl-Y</td>
-      <td>Öffnet die Artikelliste.</td>
     </tr>
     <tr>
       <td>Enter</td>
@@ -71,19 +84,67 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Alt-Click</td>
+      <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-B</td>
+      <td>Opens the filter bar.</td>
+    </tr>
+    <tr>
       <td>Befehl-N</td>
       <td>Ein neues Abonnement erstellen.</td>
     </tr>
     <tr>
-      <td>Befehl-T</td>
+      <td>Shift-Command-G</td>
+      <td>Create a group folder.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-F</td>
+      <td>Create a smart folder.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-E</td>
+      <td>Edit the selected folder URL or edit a smart folder criteria.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-D</td>
+      <td>Delete the selected folder.</td>
+    </tr>
+    <tr>
+      <td>Command-C</td>
+      <td>Copies the selected text to the clipboard. If the focus is on an article, it copies the article details to the clipboard.</td>
+    </tr>
+    <tr>
+      <td>Command-H</td>
+      <td>Hides the Vienna main window.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-H</td>
+      <td>Hides all other application windows but keeps the Vienna main window visible.</td>
+    </tr>
+    <tr>
+      <td>Command-I</td>
+      <td>Displays the Info window for the selected folder.</td>
+    </tr>
+    <tr>
+      <td>Command-L</td>
+      <td>Puts the focus on the address bar of the current tab. Or if no browser is open and has the focus, opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-N</td>
+      <td>Rename the selected folder.</td>
+    </tr>
+    <tr>
+      <td>Command-R</td>
       <td>Alle Abonnements aktualisieren.</td>
     </tr>
     <tr>
-      <td>Shift-Befehl-T</td>
+      <td>Shift-Befehl-R</td>
       <td>Nur die ausgewählten Abonnements aktualisieren.</td>
     </tr>
     <tr>
-      <td>Befehl-Minus</td>
+      <td>Control-Command-S</td>
       <td>den momentanen Aktualisierungsvorgang abbrechen.</td>
     </tr>
     <tr>
@@ -95,6 +156,42 @@
       <td>Seite einrichten.</td>
     </tr>
     <tr>
+      <td>Command-Q</td>
+      <td>Exit Vienna.</td>
+    </tr>
+    <tr>
+      <td>Befehl-T</td>
+      <td>Opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
+      <td>Befehl-U</td>
+      <td>Springt zum nächsten ungelesen Artikel.</td>
+    </tr>
+    <tr>
+      <td>Command-Z</td>
+      <td>Undoes the last action, if it can be undone.</td>
+    </tr>
+    <tr>
+      <td>Command-/</td>
+      <td>Toggles the status bar on or off.</td>
+    </tr>
+    <tr>
+      <td>Command-+</td>
+      <td>Increases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Befehl-Minus</td>
+      <td>Decreases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Command-,</td>
+      <td>Opens the Vienna preferences panel.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-Backspace</td>
+      <td>Empties the trash folder after prompting for confirmation.</td>
+    </tr>
+    <tr>
       <td>Befehl-?</td>
       <td>Aufrufen der Vienna-Hilfe.</td>
     </tr>
@@ -103,16 +200,40 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Alt-Enter/Alt-Return</td>
+      <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-Z</td>
+      <td>Redo the last action, if it was previously undone.</td>
+    </tr>
+    <tr>
       <td>Shift-Befehl-M</td>
       <td>Markiert die ausgewählten Artikel.</td>
     </tr>
     <tr>
-      <td>Shift-Befehl-R</td>
+      <td>Shift-Command-U</td>
       <td>Markiert die ausgewählten Artikel als gelesen.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-S</td>
+      <td>Uses your default mail application to send a link to the current article by e-mail.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-S</td>
+      <td>Marks the current folder read then skips to the next folder with unread articles.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-O</td>
+      <td>Restores an article from the trash back to its original folder.</td>
     </tr>
     <tr>
       <td>Shift-Befehl-K</td>
       <td>Markiert alle ausgewählten Artikel als gelesen.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-K</td>
+      <td>Marks all articles in all folders read.</td>
     </tr>
     <tr>
       <td><b>Fensterbezogene Tastatur-Kürzel</b></td>
@@ -135,8 +256,8 @@
       <td>Springt zum nächsten Tab.</td>
     </tr>
     <tr>
-      <td>Shift-Befehl-W</td>
-      <td>Schließt das Hauptfenster und verschiebt Vienna in den Hintergrund. Das Fenster kann durch einen Klick auf Vienna's Dock-Icon oder das Kürzel Befehl-1 wieder hergestellt werden.</td>
+      <td>Befehl-Y</td>
+      <td>Öffnet die Artikelliste.</td>
     </tr>
     <tr>
       <td>Befehl-M</td>
