--- a/Vienna Help/Resources/it.lproj/keyboard.html
+++ b/Vienna Help/Resources/it.lproj/keyboard.html
@@ -3,8 +3,9 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Abbreviazioni da Tastiera</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -24,15 +25,11 @@
     </tr>
     <tr>
       <td width="115">f</td>
+      <td>Opens the filter bar and puts the focus on the filter search field.</td>
+    </tr>
+    <tr>
+      <td>h</td>
       <td>Imposta il focus dell'input sulla finestra di ricerca.</td>
-    </tr>
-    <tr>
-      <td>r</td>
-      <td>Segnala gli articoli selezionati come letti.</td>
-    </tr>
-    <tr>
-      <td>s</td>
-      <td>Segnala la cartella corrente come letta poi passa alla cartella successiva con articoli non letti.</td>
     </tr>
     <tr>
       <td>k</td>
@@ -43,6 +40,22 @@
       <td>Segnala con contrassegno gli articoli selezionati.</td>
     </tr>
     <tr>
+      <td>b</td>
+      <td>Moves to the first unread article.</td>
+    </tr>
+    <tr>
+      <td>n</td>
+      <td>Moves to the next unread article.</td>
+    </tr>
+    <tr>
+      <td>r <i>or</i> u</td>
+      <td>Segnala gli articoli selezionati come letti.</td>
+    </tr>
+    <tr>
+      <td>s</td>
+      <td>Segnala la cartella corrente come letta poi passa alla cartella successiva con articoli non letti.</td>
+    </tr>
+    <tr>
       <td>&lt;</td>
       <td>Mostra l'articolo o pagina web vista in precedenza.</td>
     </tr>
@@ -51,16 +64,12 @@
       <td>Mostra l'articolo o pagina web vista successivamente.</td>
     </tr>
     <tr>
+      <td>Left</td>
+      <td>Moves the focus to the folder list if it is currently in the article list.</td>
+    </tr>
+    <tr>
       <td>Spacebar</td>
       <td>Va all'articolo successivo non letto a meno che l'articolo corrente non abbia altro testo da scorrere ed in tal caso va su di una pagina all'interno dell'articolo corrente.</td>
-    </tr>
-    <tr>
-      <td>Comando-U</td>
-      <td>Va all'articolo successivo non letto.</td>
-    </tr>
-    <tr>
-      <td>Command-Y</td>
-      <td>Opens the article list tab.</td>
     </tr>
     <tr>
       <td>Enter/Return</td>
@@ -75,8 +84,20 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Alt-Click</td>
+      <td>Open the clicked link, overriding your preference for opening links in external browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-B</td>
+      <td>Opens the filter bar.</td>
+    </tr>
+    <tr>
       <td>Comando-N</td>
       <td>Crea una nuova iscrizione.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-G</td>
+      <td>Create a group folder.</td>
     </tr>
     <tr>
       <td>Shift-Comando-F</td>
@@ -91,6 +112,26 @@
       <td>Elimina la cartella selezionata.</td>
     </tr>
     <tr>
+      <td>Command-C</td>
+      <td>Copies the selected text to the clipboard. If the focus is on an article, it copies the article details to the clipboard.</td>
+    </tr>
+    <tr>
+      <td>Command-H</td>
+      <td>Hides the Vienna main window.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-H</td>
+      <td>Hides all other application windows but keeps the Vienna main window visible.</td>
+    </tr>
+    <tr>
+      <td>Command-I</td>
+      <td>Displays the Info window for the selected folder.</td>
+    </tr>
+    <tr>
+      <td>Command-L</td>
+      <td>Puts the focus on the address bar of the current tab. Or if no browser is open and has the focus, opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
       <td>Shift-Comando-N</td>
       <td>Rinomina la cartella selezionata.</td>
     </tr>
@@ -103,7 +144,7 @@
       <td>Aggiorna solo quelle iscrizioni che siano selezionate nell'elenco cartelle.</td>
     </tr>
     <tr>
-      <td>Comando-Meno</td>
+      <td>Control-Command-S</td>
       <td>Interrompi ogni aggiornamento attivo.</td>
     </tr>
     <tr>
@@ -115,8 +156,40 @@
       <td>Attiva la finestra Formato di stampa.</td>
     </tr>
     <tr>
-      <td>Shift-Comando-V</td>
-      <td>Convalida il feed selezionato.</td>
+      <td>Command-Q</td>
+      <td>Exit Vienna.</td>
+    </tr>
+    <tr>
+      <td>Command-T</td>
+      <td>Opens a new tab and puts the focus on the address bar.</td>
+    </tr>
+    <tr>
+      <td>Comando-U</td>
+      <td>Va all'articolo successivo non letto.</td>
+    </tr>
+    <tr>
+      <td>Command-Z</td>
+      <td>Undoes the last action, if it can be undone.</td>
+    </tr>
+    <tr>
+      <td>Command-/</td>
+      <td>Toggles the status bar on or off.</td>
+    </tr>
+    <tr>
+      <td>Command-+</td>
+      <td>Increases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Comando-Meno</td>
+      <td>Decreases the size of the text in the current article or web page.</td>
+    </tr>
+    <tr>
+      <td>Command-,</td>
+      <td>Opens the Vienna preferences panel.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-Backspace</td>
+      <td>Empties the trash folder after prompting for confirmation.</td>
     </tr>
     <tr>
       <td>Comando-?</td>
@@ -127,12 +200,24 @@
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td>Alt-Enter/Alt-Return</td>
+      <td>Opens the selected article's original web page, overriding your preference for opening links in external browser.</td>
+    </tr>
+    <tr>
+      <td>Shift-Command-Z</td>
+      <td>Redo the last action, if it was previously undone.</td>
+    </tr>
+    <tr>
       <td>Shift-Comando-M</td>
       <td>Segnala con contrassegno gli articoli selezionati.</td>
     </tr>
     <tr>
       <td>Shift-Comando-U</td>
       <td>Segnala gli articoli selezionati come letti.</td>
+    </tr>
+    <tr>
+      <td>Alt-Command-S</td>
+      <td>Uses your default mail application to send a link to the current article by e-mail.</td>
     </tr>
     <tr>
       <td>Shift-Comando-S</td>
@@ -171,8 +256,8 @@
       <td>Visualizza il pannello successivo.</td>
     </tr>
     <tr>
-      <td>Shift-Comando-W</td>
-      <td>Chiude la finestra di Vienna ma lascia Vienna in esecuzione in background. Puoi riportare la finestra in vista facendo clic sull'icon nel dock di Vienna o premendo Comando-1.</td>
+      <td>Command-Y</td>
+      <td>Opens the article list tab.</td>
     </tr>
     <tr>
       <td>Comando-M</td>
