--- a/Vienna Help/Resources/nl.lproj/Vienna.html
+++ b/Vienna Help/Resources/nl.lproj/Vienna.html
@@ -24,6 +24,8 @@
           <p><a href="keyboard.html">Ontdek toetscombinaties voor veelgebruikte commando's</a></p>
           <p class="header">Hoe kan ik?</p>
           <p><a href="faq.html">Veelgestelde vragen, ondersteuning verkrijgen en problemen oplossen.</a></p>
+          <p class="header">Advanced Settings</p>
+          <p><a href="advanced.html">Explains the settings in the Advanced Preferences.</a></p>
         </td>
       </tr>
     </tbody>
