--- a/Vienna Help/Resources/en.lproj/Vienna.html
+++ b/Vienna Help/Resources/en.lproj/Vienna.html
@@ -5,6 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="AppleTitle" content="Vienna Help" />
+  <meta name="robots" content="anchors" />
   <link href="../shared/helpstyle.css" rel="stylesheet" type="text/css" />
   <title>Vienna Help</title>
 </head>
